--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <!-- LISTA COM BOTÕES ENDEREÇADOS-->
         <ul>
             <li>
-                <a href="#" target="_blank">INSCREVA-SE NO CANAL</a>
+                <a href="#" target="_blank">LINK 1</a>
             </li>
             <li>
-                <a href="#" target="_blank">PLAYLIST DE MÚSICAS</a>
+                <a href="#" target="_blank">LINK 2</a>
             </li>
             <li>
-                <a href="#" target="_blank">MEUS PROJETOS</a>
+                <a href="#" target="_blank">LINK 3</a>
             </li>
             <li>
-                <a href="#" target="_blank">PORTFÓLIO</a>
+                <a href="#" target="_blank">LINK 4</a>
             </li>
         </ul>
         <!-- BOTÕES DE SOCIAL LINKS  -->
