github link changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
         <!-- BOTÕES DE SOCIAL LINKS  -->
         <div id="social-links">
-            <a href="https://github.com/ThaiSoNS2" target="_blank">
+            <a href="https://github.com/thaisondf" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
             <a href="https://instagram.com/thaison_df" target="_blank">
